<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/genoptions" android:summary="@string/gen_summary" android:order="100">
        <CheckBoxPreference android:summaryOff="@string/pause_instant" android:title="@string/pause_behaviour" android:summary="@string/pause_behaviour_summary" android:key="prefPauseNextSilence" android:summaryOn="@string/pause_next_silence" android:order="100" android:defaultValue="false" />
        <ListPreference android:dialogTitle="@string/choose_storage" android:key="prefStorageInUse" android:summary="@string/storage_location_summary" android:title="@string/storage_location" android:order="300"/>
        <CheckBoxPreference android:key="prefInvertWaveform" android:defaultValue="false" android:summaryOn="@string/do_rev_signal" android:summaryOff="@string/not_rev_signal" android:order="300" android:title="@string/signal_polarity"/>
    </PreferenceCategory><PreferenceCategory android:title="@string/autopauseoptions" android:summary="@string/tap_summary" android:order="200">
        <CheckBoxPreference android:summaryOff="@string/play_thru_silence" android:title="@string/auto_pause" android:summary="@string/silence_behaviour" android:key="prefPauseDuringSilence" android:disableDependentsState="false" android:summaryOn="@string/pause_during_silence" android:order="100"/>
        <CheckBoxPreference android:key="prefPauseFirstSilence" android:summaryOff="@string/pause_first_optional" android:summaryOn="@string/pause_first_silence" android:dependency="prefPauseDuringSilence" android:order="200" android:title="@string/fs_pause" android:summary="@string/first_silence"/>
        <CheckBoxPreference android:summaryOff="@string/pause_all_silences" android:title="@string/long_silences_only" android:dependency="prefPauseDuringSilence" android:summary="@string/long_silence_def" android:key="prefLongSilencesOnly" android:summaryOn="@string/pause_long_only" android:order="300"/>
        <EditTextPreference android:dialogIcon="@drawable/ic_menu_pause" android:dialogTitle="Short Silence" android:dialogMessage="Enter short silence duration" android:key="prefShortSilenceDuration" android:positiveButtonText="Set" android:defaultValue="8000" android:negativeButtonText="Cancel" android:title="@string/short_silence_duration" android:summary="@string/short_silence_summary" android:order="500" android:numeric="integer" android:dependency="prefPauseDuringSilence"/>
        <EditTextPreference android:dialogIcon="@drawable/ic_menu_pause" android:dialogTitle="@string/long_silence_dialog_title" android:dialogMessage="@string/long_silence_dialog_summary" android:title="@string/long_silence_duration" android:key="prefLongSilenceDuration" android:positiveButtonText="Set" android:summary="@string/long_silence_summary" android:defaultValue="44100" android:negativeButtonText="Cancel" android:order="600" android:numeric="integer" android:dependency="prefPauseDuringSilence"/>
    </PreferenceCategory>
    <PreferenceCategory android:order="300" android:title="@string/c64options" android:summary="@string/prgoptionssummary">
        <ListPreference android:dialogTitle="Loader for PRG/T64" android:entryValues="@array/prgLoaderTypeValues" android:entries="@array/prgLoaderType" android:title="@string/loaderencoding" android:defaultValue="1" android:summary="@string/prgloadertype" android:key="prefPRGLoaderType"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/tzx_heading" android:summary="@string/tzx_summary" android:order="400">
        <CheckBoxPreference android:key="prefUseLowSampleRate" android:summaryOn="@string/tzx_22khz" android:summaryOff="@string/tzx_44khz" android:order="100" android:title="@string/tzx_samples"/>
    </PreferenceCategory>
    
    
</PreferenceScreen>